# glue-lineage-scanner

./: .gitignore  CONTRIBUTING.md  README.md  install-summary.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: lineage.yaml
github/workflows/: lineage.yaml
glue_jobs/: job_1.py
lineage_app/: cli.py
lineage_app/extract/: ast_extract.py
