[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "glue-lineage-scanner"
version = "0.1.0"
description = "AST-based lineage extraction for AWS Glue PySpark jobs"
requires-python = ">=3.10"
dependencies = []

# ✅ IMPORTANT: tell setuptools what to package
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["lineage_app*"]
exclude = ["glue_jobs*", "scripts*", "utils*"]
